--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "laravel-mix": "^1.0",
         "lodash": "^4.17.4",
         "vue": "^2.5.7",
+        "webpack-cli": "^3.3.8",
         "webpack-dev-server": "^3.0.0"
     }
 }
