--- a/package.json
+++ b/package.json
@@ -46,20 +46,27 @@
         "@vue/cli-service": "3.5.3",
         "@vue/test-utils": "1.0.0-beta.29",
         "autoprefixer": "^9.5.1",
+        "axios": "^0.18.1",
         "babel-core": "7.0.0-bridge.0",
         "babel-eslint": "10.0.1",
-        "babel-jest": "23.6.0",
+        "babel-jest": "^25.0.0",
+        "bootstrap-sass": "^3.3.7",
         "chalk": "2.4.2",
         "chokidar": "2.1.5",
         "connect": "3.6.6",
+        "cross-env": "^5.1",
         "eslint": "5.15.3",
         "eslint-plugin-vue": "5.2.2",
         "html-webpack-plugin": "3.2.0",
         "husky": "1.3.1",
+        "jquery": "^3.2",
+        "laravel-mix": "^5.0.0",
         "lint-staged": "8.1.5",
+        "lodash": "^4.17.4",
         "mockjs": "1.0.1-beta3",
         "node-sass": "^4.9.0",
         "plop": "2.3.0",
+        "resolve-url-loader": "^3.1.0",
         "runjs": "^4.3.2",
         "sass-loader": "^7.1.0",
         "script-ext-html-webpack-plugin": "2.1.3",
@@ -67,13 +74,8 @@
         "serve-static": "^1.13.2",
         "svg-sprite-loader": "4.1.3",
         "svgo": "1.2.0",
+        "vue": "^2.5.7",
         "vue-template-compiler": "2.6.10",
-        "axios": "^0.18.1",
-        "bootstrap-sass": "^3.3.7",
-        "cross-env": "^5.1",
-        "jquery": "^3.2",
-        "laravel-mix": "^2.0",
-        "lodash": "^4.17.4",
-        "vue": "^2.5.7"
+        "webpack-cli": "^3.3.9"
     }
 }
